# chess_coach

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
chess_ml/: __init__.py
chess_ml/api/: __init__.py  games.py  main.py  play.py  profile.py  train.py
chess_ml/classifier/: __init__.py  classify.py  config.py  learned.py  model.py  motifs.py  openings.py  train.py
chess_ml/engine/: __init__.py  maia.py  opponent.py  stockfish.py
chess_ml/explanation/: __init__.py  cache.py  client.py  models.py  prompt.py  service.py
chess_ml/ingestion/: __init__.py  lichess.py  pgn.py
chess_ml/play/: __init__.py  session.py
chess_ml/profile/: __init__.py  db.py  demo.py  store.py
configs/classifier/: slice16-lichess-v1.toml  slice8-v1.toml
docs/evals/: 009-slice8-classifier-v1.json  016-lichess-classifier-v1.json
docs/plans/: 001-mvp.md  002-slice1-engine-review.md  003-slice2-classifier-v0.md  004-slice3-explanation-layer.md  005-slice4-play-loop.md  006-slice5-coach-latency-ux.md  007-slice6-profile-dashboard.md  008-slice7-maia-opponent.md  009-slice8-learned-classifier.md  010-coach-grounding-repair.md  011-slice9-polish-e2e-demo.md  012-product-roadmap.md  013-play-mode-ergonomics.md  014-opening-detection-eco-dashboard.md  015-richer-motif-heuristics.md  016-real-lichess-training-run.md  017-explanation-quality-upgrade.md  018-productization-and-public-gtm-roadmap.md
scripts/: fetch_maia_weights.sh
tests/fixtures/classifier/: slice8-mini.pgn
tests/fixtures/demo/: hanging-piece.pgn  mate-threat.pgn  missed-tactic.pgn
tests/unit/: conftest.py  test_classifier_learned.py  test_demo.py  test_explanation.py  test_health.py  test_maia.py  test_motifs.py  test_openings.py  test_pgn_parser.py  test_play.py  test_profile.py  test_stockfish.py  test_training.py
web/: .gitignore  package-lock.json  package.json  playwright.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/dashboard/: page.tsx
web/app/play/: page.tsx
web/app/train/: TrainClient.tsx  page.tsx
web/components/: Board.tsx  GameReview.tsx  HealthIndicator.tsx
web/e2e/: global-setup.ts  mvp.spec.ts
web/lib/: api.ts  chess.ts  types.ts
