[project]
name = "chess-ml"
version = "0.1.0"
description = "Personalized chess coach: weakness classifier + explanation layer + profile store"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-chess>=1.999",
    "pydantic>=2.9.0",
    "torch>=2.11.0",
    "pyarrow>=23.0.1",
    "zstandard>=0.25.0",
    "numpy>=2.4.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chess_ml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = ["E501"]  # line length enforced by formatter

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["chess_ml"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["pyarrow", "pyarrow.*", "torch", "torch.*", "zstandard"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
